<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_app_id">1509722595947330</string> <!-- Facebook app id -->
    <string name="app_name">Khel24/7</string>
    <string name="action_settings">Settings</string>
    <string name="action_account_settings">Account Settings</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="logo_content_desc">Application Logo</string>

    <!-- activity titles -->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_fill_profile">Football Info</string>
    <string name="title_activity_account_login">AccountLoginActivity</string>

    <!-- Menu titles -->


    <!-- Login-Register form field strings -->
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="show_password">See Password</string>
    <string name="enter_location">Enter your Location</string>
    <string name="account_label">Khel247 Account</string>
    <string name="fill_profile_position">Position</string>
    <string name="fill_profile_country_text">Country</string>
    <string name="personal_info_text">Who are you?</string>
    <string name="location_desc_text">Where do you play?</string>
    <string name="area_text">Area (Optional)</string>
    <string name="city_text">City</string>
    <string name="country_text">Country</string>

    <!-- navigation drawer string -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Account Settings -->
    <string name="account_settings_change_pw_txt">Change Password</string>
    <string name="account_change_pw_original_txt">Current Password</string>
    <string name="account_change_pw_new_txt">New Password</string>
    <string name="account_change_pw_new2_txt">Confirm Password</string>
    <string name="change_pw_btn_txt">Change Password</string>
    <string name="account_settings_delete_account_txt">Deactivate Account</string>
    <string name="delete_account_btn_text">Deactivate</string>

    <!-- People Activity -->
    <string name="title_activity_people">Contacts</string>
    <string name="contacts_search">Search Contacts</string>
    <string name="member_search">Search by Username or Email</string>

    <!--  -->
    <string name="my_people_empty_text">No Contacts</string>
    <string name="my_people_search_empty_text">No Search Results</string>
    <string name="my_people_search_people_link_text">Find People you know</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Create Game -->
    <string name="game_name">Name</string>
    <string name="game_organiser">Organiser</string>
    <string name="game_mode">Mode</string>
    <string name="game_mode_private">Private</string>
    <string name="game_mode_public">Public</string>
    <string name="game_format">Format</string>
    <string name="game_duration">Duration</string>
    <string name="game_date">Date</string>
    <string name="game_time">Time</string>
    <string name="game_invite">Invite</string>
    <string name="game_players">Players</string>
    <string name="game_not_responded">Invited</string>
    <string name="players_coming">Coming</string>
    <string name="players_not_coming">Not Coming</string>
    <string name="game_status">Status</string>
    <string name="create_game_btn_text">Create!</string>
    <string name="invite_empty_view">Invite some peeps!</string>
    <string name="custom_duration">Custom Duration</string>
    <string name="game_location">Location</string>
    <string name="game_advanced_options">Advanced Options</string>
    <string name="game_min_players">Min Players</string>
    <string name="game_max_players">Max Players</string>
    <string name="game_notify_hours_before">Notify</string>
    <string name="game_use_location_as_name">LOCATION AS NAME</string>
    <string name="game_organiser_playing">I\'M NOT PLAYING</string>
    <string name="game_confirm_btn_text">Confirm Game</string>
    <string name="game_cancel_btn_text">Cancel Game</string>

    <!-- Location Dialog -->
    <string name="dialog_location_name_hint">Name</string>
    <string name="dialog_location_desc_hint">Description, Directions ... </string>
    <string name="dialog_location_point_maps_btn_text">Mark on Map</string>
    <string name="dialog_location_title">Location</string>
    <string name="dialog_location_latitude_hint">Latitude</string>
    <string name="dialog_location_longitude_hint">Longitude</string>
    <string name="title_activity_game">Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_game_location">Point Location</string>
    <string name="game_location_search_text">Search Places</string>
    <string name="game_invite_more_btn_text">Invite +</string>
    <string name="done_btn_text">Done</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="mark_game_location_text">Mark a game location</string>

    <!-- Home Fragment Strings -->
    <string name="home_organised_games_text">Organised Games</string>
    <string name="home_organised_games_empty_text">No Games Organised</string>
    <string name="home_invited_games_text">Invited Games</string>
    <string name="home_invited_games_empty_text">No Invites. Find public games around you</string>
    <string name="home_organise_button_text">ORGANISE</string>
    <string name="home_find_public_games__btn_text">FIND GAMES</string>
    <string name="home_attending_games_text">Attending Games</string>
    <string name="home_attending_games_empty_text">Not attending any games</string>

    <!-- Notifcation text -->
    <string name="game_invitation_accept_button_text">Accept</string>
    <string name="game_invitation_reject_button_text">Reject</string>
    <string name="game_invitation_view_button_text">View</string>
    <string name="title_activity_game_people_lists">GamePeopleListsActivity</string>

    <!-- Member Profile -->
    <string name="member_profile_username_title">Username</string>
    <string name="member_profile_email_title">Email</string>
    <string name="member_profile_location_title">Plays In</string>
    <string name="member_profile_contacts_title">Contacts</string>
    <string name="member_profile_view_contacts_btn_text">View</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_custom_time_picker">CustomTimePickerActivity</string>
    <string name="title_activity_find_games">Find Games Around You</string>
    <string name="title_activity_create_game">Create Game</string>
    <string name="title_activity_view_location">View Game Location</string>

    <!--find games-->
    <string name="find_games_btn_text">Find</string>
    <string name="find_games_extra_text">(All games seen start in the next 24 hours)</string>
    <string name="register_fullname_hint">Name</string>
    <string name="fill_profile_dob">Date of Birth</string>
    <string name="name_text">Using your real name makes it easier for your \n friends to find you</string>
    <string name="register_pin">Pin Code</string>
    <string name="date_of_birth_text">Date of Birth</string>

</resources>
