<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/application_background"
    android:layout_gravity="center"
    >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="top|center"
        android:layout_margin="@dimen/profile_pic_margin"
        android:src="@drawable/user_48"
        android:background="@drawable/rectangle_transparent_background"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/tf_height"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/form_half_width_field_margin"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:id="@+id/fill_profile_firstname_tf"
            android:singleLine="true"
            android:imeOptions="actionNext"
            />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/tf_height"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/form_half_width_field_margin"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:id="@+id/fill_profile_lastname_tf"
            android:singleLine="true"
            android:imeOptions="actionNext"
            />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_text"
        android:layout_marginBottom="@dimen/tf_vertical_margin"/>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/tf_height"
        android:hint="@string/date_of_birth_text"
        android:imeOptions="actionNext"
        android:layout_marginBottom="@dimen/tf_vertical_margin"
        />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/tf_height"
        android:hint="@string/register_pin"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:layout_marginBottom="@dimen/tf_vertical_margin"
        />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/tf_height"
        android:hint="@string/fill_profile_position"
        android:imeOptions="actionDone"
        android:layout_marginBottom="@dimen/tf_vertical_margin"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_button_height"
        android:text="@string/register"/>

</LinearLayout>